.metadata/.plugins/org.eclipse.cdt.ui/black.build.log
10:54:23 **** Incremental Build of configuration Debug for project black ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xC -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:184:13: error: invalid storage class for function 'MX_ADC1_Init'
  184 | static void MX_ADC1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:299:13: error: invalid storage class for function 'MX_IWDG_Init'
  299 | static void MX_IWDG_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:327:13: error: invalid storage class for function 'MX_GPIO_Init'
  327 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:371:1: error: expected declaration or statement at end of input
  371 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:56:13: warning: 'MX_GPIO_Init' used but never defined
   56 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:57:13: warning: 'MX_IWDG_Init' used but never defined
   57 | static void MX_IWDG_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:58:13: warning: 'MX_ADC1_Init' used but never defined
   58 | static void MX_ADC1_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:362:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  362 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:327:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  327 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:299:13: warning: 'MX_IWDG_Init' defined but not used [-Wunused-function]
  299 | static void MX_IWDG_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:184:13: warning: 'MX_ADC1_Init' defined but not used [-Wunused-function]
  184 | static void MX_ADC1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:134:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  134 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

10:54:25 Build Failed. 5 errors, 8 warnings. (took 1s.749ms)

